--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,6 @@ ExternalProject_Add(${JSON_EXT_TARGET}
   PREFIX "${DEPS_BUILD_DIR}/${_JSON_LIB_NAME}_build"
   SOURCE_DIR "${${JSON_FC_TARGET}_SOURCE_DIR}"
   CMAKE_ARGS
-    -DCMAKE_INSTALL_PREFIX:PATH=install/${_JSON_LIB_NAME}
+    -DCMAKE_INSTALL_PREFIX:PATH=${CMAKE_CURRENT_SOURCE_DIR}/install/${_JSON_LIB_NAME}
     -DCMAKE_BUILD_TYPE:STRING=${CMAKE_BUILD_TYPE}
     )
