--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -44,11 +44,10 @@ jobs:
           cd build
           cmake --build . --config Release
           
-      - name: Zip
-        shell: bash
-        run: |
-          cd install/nlohmann_json
-          zip -r packages.zip include
+      - uses: actions/action-zip@v1
+        with:
+          files: install/nlohmann_json/include
+          dest: install/nlohmann_json/packages.zip
           
       - uses: actions/upload-artifact@v2
         with:
