--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -44,7 +44,7 @@ jobs:
           cd build
           cmake --build . --config Release
           
-      - uses: actions/action-zip@v1
+      - uses: papeloto/action-zip@v1
         with:
           files: install/nlohmann_json/include
           dest: install/nlohmann_json/packages.zip
