--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,13 +28,26 @@ jobs:
       # Runs a single command using the runners shell
       - name: Install cmake
         run: choco install cmake
+        
+      # Retrieve cache
+      - uses: actions/cache@v2
+        id: cache
+        with:
+          path: ./
+          key: ${{runner.os}}-${{hashFiles('install')}}
 
-      # Configure
-      - name: Configure
+      # Create install and build dirs if cache miss
+      - name: Create dirs
+        if: steps.cache.outputs.cache-hit != 'true'
         shell: bash
         run: |
           mkdir install
           mkdir build
+        
+      # Configure
+      - name: Configure
+        shell: bash
+        run: |
           cd build
           cmake ..
 
@@ -43,6 +56,14 @@ jobs:
         run: |
           cd build
           cmake --build . --config Release
+      
+      # Cache the install and build dirs
+      - uses: actions/cache@v2
+        with:
+          path: |
+            install
+            build
+          key: ${{runner.os}}-${{hashFiles('install')}}
           
       - uses: papeloto/action-zip@v1
         with:
