--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -61,6 +61,17 @@ jobs:
         run: |
           cd build
           cmake ..
+        
+      # Replace wextra
+      - name: wextra removal
+        if: runner.os == 'windows-latest'
+        shell: bash
+        run: sed -i 's/set (CMAKE_C_FLAGS "-Wall -Wextra -pedantic ${CMAKE_C_FLAGS}")/#set (CMAKE_C_FLAGS "-Wall -Wextra -pedantic ${CMAKE_C_FLAGS}")/' test.txt
+        
+      - name: cat wextra
+        if: runner.os == 'windows-latest'
+        shell: bash
+        run: cat test.txt
 
       - name: Build
         shell: bash
