--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -69,7 +69,7 @@ jobs:
         run: sed -i 's/set (CMAKE_C_FLAGS "-Wall -Wextra -pedantic ${CMAKE_C_FLAGS}")/#set (CMAKE_C_FLAGS "-Wall -Wextra -pedantic ${CMAKE_C_FLAGS}")/' test.txt
         
       - name: cat wextra
-        if: runner.os == 'windows-latest'
+        if: runner.os == 'Windows'
         shell: bash
         run: cat test.txt
 
