--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -68,6 +68,12 @@ jobs:
         shell: bash
         run: sed -i 's/set (CMAKE_C_FLAGS "-Wall -Wextra -pedantic ${CMAKE_C_FLAGS}")/#set (CMAKE_C_FLAGS "-Wall -Wextra -pedantic ${CMAKE_C_FLAGS}")/' test.txt
         
+        # Replace wextra 2
+      - name: wextra removal
+        if: runner.os == 'Windows'
+        shell: bash
+        run: sed -i 's/set (CMAKE_CXX_FLAGS "-Wall -Wextra -pedantic ${CMAKE_CXX_FLAGS}")/#set (CMAKE_CXX_FLAGS "-Wall -Wextra -pedantic ${CMAKE_CXX_FLAGS}")/' test.txt
+        
       - name: cat wextra
         if: runner.os == 'Windows'
         shell: bash
