--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,7 +18,23 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: windows-latest
+    #runs-on: windows-latest
+    name: ${{matrix.config.name}}
+    runs-on: ${{matrix.config.os}}
+    matrix:
+      config:
+      - {
+            name: "Windows Latest"
+            os: windows-latest
+          }
+      - {
+          name: "Ubuntu Latest"
+          os: ubuntu-latest
+        }
+      - {
+          name: "macOS Latest"
+          os: macos-latest
+        }
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -27,6 +43,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Install cmake
+        if: runner.os == "Windows"
         run: choco install cmake
         
       # Retrieve install cache
