--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,23 +19,11 @@ jobs:
   build:
     # The type of runner that the job will run on
     #runs-on: windows-latest
-    name: ${{matrix.config.name}}
-    runs-on: ${{matrix.config.os}}
-    matrix:
-      config:
-      - {
-            name: "Windows Latest"
-            os: windows-latest
-          }
-      - {
-          name: "Ubuntu Latest"
-          os: ubuntu-latest
-        }
-      - {
-          name: "macOS Latest"
-          os: macos-latest
-        }
-
+    runs-on: ${{matrix.os}}
+    strategy:
+      matrix:
+        os: [windows-latest, ubuntu-latest, macos-latest]
+      
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
