--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -61,6 +61,19 @@ jobs:
         shell: bash
         run: mkdir build
         
+      # Create conda environment
+      - name: Install conda
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          python-version: "3.8"
+      - name: Create conda environment
+        shell: bash -l {0}
+        run: conda create -n ommo_build_common mkl-devel openssl
+      - name: List conda environment
+        shell: bash -l {0}
+        run: conda list
+        
+        
       # Configure
       - name: Configure
         shell: bash
